# rohonc-engine

./: .gitignore  README.md  USAGE.md  full_log.txt  pyproject.toml
data/: rohonc_rtff_sample.txt  rohonc_symbol_inventory.json  section_distances.json
docs/: ROHONC_MANUSCRIPT.md
examples/: quickstart.py
programs/: animated_cfg_corpus.py  bootstrap_explorer.py  ig_bridge.py  page_comparator.py  plot_cfg_document.py  run_all.py  section_distance.py  syncon_bridge.py
rohonc_engine/: __init__.py  callgraph.py  compiler.py  primitives.py  runtime.py  sectional.py
